--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -45,7 +45,7 @@
                           <div class="user-box">
                             <input type="text" name="p2" required="" id="p2" onblur="pcheck();"><label>Confirm Password</label>
                           </div>
-                          <input type="submit">
+                          <input type="submit" class="submit">
                         </form>
                       </div>
                 </div>  
