--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <h2>Have An Account? Sign In <a href="">Here</a> or Create One <a href="/signup">Here</a></h2>
+        <h2>Have An Account? Sign In <a href="/signin">Here</a> or Create One <a href="/signup">Here</a></h2>
     </div>
     <!-- End of selection card -->
     
