--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="text-container">
-                                    <p style="font: bolder; font-size: 3rem;">Get Started</p>
+                                    <p style="font: bolder; font-size: 3rem; padding-bottom: 60px;">Get Started</p>
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-lg-6" ><a href="/cricket"><img src="/images/cricket.png" class="options" alt="cricket.png">Cricket</a></div>
@@ -56,7 +56,7 @@
                                         </div>
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col-lg-6" ><a href=""><img src="/images/american-football.png" class="options" alt="football.png">Football</a></div>
+                                                <div class="col-lg-6" ><a href="/hockey"><img src="/images/american-football.png" class="options" alt="football.png">Hockey</a></div>
                                                 <div class="col-lg-6"><a href="/soccer"><img src="/images/football.png" class="options" alt="soccer.png">Soccer</a></div>
                                             </div>
                                         </div>
@@ -66,7 +66,9 @@
                 </div>
             </div>
         </div>
+        <h2>Have An Account? Sign In <a href="/signin">Here</a> or Create One <a href="/signup">Here</a></h2>
     </div>
     <!-- End of selection card -->
+    
 </body>
 </html>
