--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
                                     <p style="font: bolder; font-size: 3rem; padding-bottom: 60px;">Get Started</p>
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col-lg-6" ><a href="/cricket"><img src="/images/cricket.png" class="options" alt="cricket.png">Cricket</a></div>
+                                                <div class="col-lg-6" ><a href="/help"><img src="/images/help.png" class="options" alt="help.png">Get Help</a></div>
                                                 <div class="col-lg-6"><a href="/basketball"><img src="/images/basketball.png" class="options" alt="basketball.png">Basketball</a></div>
                                             </div>
                                         </div>
