--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,10 +40,10 @@
                             <input type="email" name="email" id="mail" onblur="echeck();" required=""><label>E-Mail</label>
                           </div>
                           <div class="user-box">
-                            <input type="text" name="p1" required="" id="p1"><label>Password</label>
+                            <input type="password" name="p1" required="" id="p1"><label>Password</label>
                           </div>
                           <div class="user-box">
-                            <input type="text" name="p2" required="" id="p2" onblur="pcheck();"><label>Confirm Password</label>
+                            <input type="password" name="p2" required="" id="p2" onblur="pcheck();"><label>Confirm Password</label>
                           </div>
                           <input type="submit" class="submit">
                         </form>
@@ -101,6 +101,7 @@
             email.setCustomValidity("");
         }
     }
+
     
 </script>
 </html>
