--- a/views/basketball.ejs
+++ b/views/basketball.ejs
@@ -32,7 +32,7 @@
     <div id="page-content" class="container basketball-score-card"></div>
      
     <div class="container basketball-score-card" id="scores">
-    <table class="table table-striped table-dark table-hover table-borderless">
+    <table class="table table-striped table-dark table-hover table-borderless" id="bball-scores">
         <thead >
         <tr>
            <td colspan="7" style="padding: 2rem 0rem 1rem 0rem"><img src="/images/NBA_Logos-master/new_team.png" width="100" alt=""></td>
@@ -67,42 +67,45 @@
                 </form>  
               </tr>
               <% } %> 
-        </tbody>
+            </tbody>
     </table>
     </div>
 
-    <div id="news"  style="display: none;">      
-      <table id="news-table">
-        <% for(i=0;i<8;i+=2){  %> 
-        <tr>
-          <td>
-            <div class="articles card bg-dark text-white" >
-              <div class="card-header">
-                <%= news[i]['title'] %> 
+    <!-- News -->
+    <div id="news"  style="display: none; margin-top: 20px;">  
+      <!-- divsnews -->
+      <div class="container" >
+        <!--Grid row-->
+        <div class="row">
+          <div class="col-md-9 mb-4">
+            <section>
+              <% for(i=0;i<8;i++){  %>
+              <!-- Individual Post -->
+              <div class="row center" style="margin-bottom: 20px;">
+                <div class="col-md-4 mb-4">
+                  <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
+                    <img src="<%= news[i]['urlToImage'] %> " class="img-fluid"  alt="Image not Found"/>
+                    <a href="#!">
+                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-8 mb-4">
+                  <h5><%= news[i]['title'] %></h5>
+                  <p>
+                    <%= news[i]['description']  %>
+                  </p>
+                  <a href="<%= news[i]['url'] %>" target="_blank"><button type="button" class="btn btn-primary">Read</button></a>
+                </div>
               </div>
-              <img class="article-img card-img-top" src="<%= news[i]['urlToImage'] %> " alt="">
-              <div class="card-body">  
-                <p><%= news[i]['description']  %> </p>
-                <p><a href="<%= news[i]['url'] %> ">Read More</a></p>
-              </div>
-            </div>
-          </td>
-          <td>
-            <div class="articles card bg-dark text-white" >
-              <div class="card-header">
-                <%= news[i+1]['title'] %> 
-              </div>
-              <img class="article-img card-img-top" src="<%= news[i+1]['urlToImage'] %> " alt="">
-              <div class="card-body">  
-                <p><%= news[i+1]['description']  %> </p>
-                <p><a href="<%= news[i+1]['url'] %> ">Read More</a></p>
-              </div>
-            </div>
-          </td>
-        </tr>
-        <% }  %> 
-      </table>      
+              <% }%>
+            </section>
+          </div>
+        </div>
+      </div>
     </div>
+
 
   </body>
   <script defer>
