--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
             <img src="/images/trophy.png" alt="" width="30" height="25" class="d-inline-block align-top">
             AllSports
           </a>
+          <a href="/profile" style="float: right;">Profile</a>
         </div>
       </nav>
       <!-- End of CenterSport Logo -->
