--- a/public/toggle.css
+++ b/public/toggle.css
@@ -2,9 +2,9 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 100px;
+    width: 5em;
     height: 28px;
-    margin: 20px;
+    margin: 20px 10px;
   }
   
   /* Hide default HTML checkbox */
@@ -48,9 +48,9 @@
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(70px);
-    -ms-transform: translateX(70px);
-    transform: translateX(70px);
+    -webkit-transform: translateX(3em);
+    -ms-transform: translateX(3em);
+    transform: translateX(3em);
   }
   
   /* Rounded sliders */
