--- a/views/help.ejs
+++ b/views/help.ejs
@@ -81,6 +81,7 @@
         <h2 class="display-5">Match Discussions</h2>
         <p class="lead">Comment On and Discuss your favourite moments with others watching the match.</p>
       </div>
+      <img src="/images/disc.png" alt="" class="images">
       <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
